fix plex deployment again

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:9fGoqZgIIXEVP+BviiGLFt1gtandXVFRNTr4sJbrSNjtk3cK3zpAwIJ14dAnyKT83zH3fSJ5zkbGy0YrTLYpcKI=,iv:xge/GBgsAhmGTXJx9yRVgX6x2YV0MXDmZl5mF0UvDXQ=,tag:R3SRD5oAcyw1J3COW+499Q==,type:comment]
-#ENC[AES256_GCM,data:OTtxcL6W3G8bPgT/q2yoPeUpyukixrQCXYvHwDxBONtVKtscTEGYKt/odbw=,iv:PWcfXC7TR42IkG03Y9h9EWalw0jX52HUp6I3aF/88u8=,tag:bN22JvPm8RNgS340uNYUwQ==,type:comment]
-VIP: ENC[AES256_GCM,data:bPbuBnVSnCg7/swtJQ==,iv:oSv+bRFM+I3DxxoJ6P6u23/Vm+uuTn3NBbsVrDXHvQE=,tag:wiITU5hFVDF0Q2ggH5PSJQ==,type:str]
-#ENC[AES256_GCM,data:w0021gUcMeaxO52Y97ufGoRIuibogJP/H1lK,iv:0DmyHsMtxjDg65a0hQoCk18ipaXl327W3DCp23htMoY=,tag:74WHvEYdx1YfcWAA9so8bg==,type:comment]
-#ENC[AES256_GCM,data:XtPj9RFDMaFAnA9bSnOW4R73YnVvgNNF8ut4bBo2Xvi+0YrKtjPgrrdthAVFWau1FA+vOtXQM0gRQrUai+ecrhQX06zmaVArB0Bv37BfqDRQG2qGUBeB8hM=,iv:jzoztXtW6kFR5bo/7Unpv7PMPfjoivODwn6feThDAXM=,tag:OXWC29Fq9GUjhqZndjhP1Q==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:0NU+iNO0tYfyPkJ86c4=,iv:hyGSILrCV8APjJ9hXHgUmj1W6L89DxcsAiJFy8Yr3uk=,tag:CeaEriBKmlDxU60Lw+2vOw==,type:str]
-#ENC[AES256_GCM,data:lZEC1zjVsUbYQCT5AT/0IGVIpflf41JVHFwDspuZRFsDzA==,iv:OV/RkkvFmS0ekvQ+c7xcHnqr1EGQ8wAQkOZAd4ZPYs4=,tag:smeiC2cUenm52sRTRbz4Wg==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:x9u4XXCvF68VjD27AQ==,iv:dmf261WOvYJG0T3KnA/cZvsBzAe2wZL/HxQwIIrAuz8=,tag:D6S93s3fuNMgPgkrfb3nQg==,type:str]
-#ENC[AES256_GCM,data:66IOQ54LdnYxhbmFRMtfAU6n9oZ5yAkkMs7RUqt24lZ7aoEQTlOgCEXxZ/9T9Ro=,iv:1sGgH67X4kyazPYgiq7twDYps466CQH++Hr0Sel5eUI=,tag:45LXZyuHr0DjCan9He7RfA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:+WhHnXcHRNdNlAOnulFaqIuV87sqJYT11Kje/GM8rw==,iv:o6uMnyyzruE01TDJ9RuHkTfZmA7I+9fIeiWehS8qUo0=,tag:AKPWuddHjQY35/fMXCu0Ng==,type:str]
-#ENC[AES256_GCM,data:VSY6Wlg+UqXGq/Yyo94Rn2fZDCMjaXMec0g5Etp6Nkh7NuqiQaoUxDt7R6xJDpYeG0PDI6mRM3zvZ1c1Dfgm4idK8OxoekRLmdasuKBj6TTEmQ==,iv:gCguI0jD7mOZLItD5+S0TvDocyp+6d5xPo85D49z2cs=,tag:rCJCFPR2daMg3RqqkaUyew==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:j3FDLkfCX8zJjq6wUUBL,iv:DGpOi/KJs0jHMpzM+OkzKT8o7I6uVGYZhAyDisT7u7E=,tag:F8mpBo2z9KaOSt4PuhL9kQ==,type:str]
-#ENC[AES256_GCM,data:64Fp0h62GM0WS7xCKABU6GbpofU6UGA6vkuyaYsPcYww,iv:VgGybJ5m/hXdPXrsg+H7k9ikKT7HMUHI3FklvfIv6E4=,tag:d9GFeBXoqdNDxB9p8BGMjw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:IXRXmjcGANRq7360ffiu,iv:gAnVbz7iGEYOc4AWVsSHym4klHsbFGI+R7N9Mm6H1A4=,tag:0bJXpNLpGRVcmc+ive0bnA==,type:str]
-#ENC[AES256_GCM,data:XsATqm8QHMQRfU6Ms9bxXCxEJTjmiok5l0iKr5BeqYKc1VB8y3ugtF8K5FqeBoc7aU0hD4FH/5/gC8JKOFcxRmORx+8fHTEMMEJfzdk4yGY=,iv:+I9b0gIUJr/6Tg1rERAC3V4LCqbW3m5N2balR615O+o=,tag:6EnZy2QN+U4hNZaj0XpQrQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:3lY4sc/gDolRHX0DUARD,iv:cjwE2pRnTFoFFo+9+JdBbfNXZCDpmygdUp2LEdYXKNg=,tag:QCd0jFPUGdXq5DwpURYCRw==,type:str]
-#ENC[AES256_GCM,data:Kpfr8OqwIMLidVg0pGYCcFcTAUoMnIn2DIruJp1apXMy/ZRolehu7t4MWkd9S53b/BO3Kd5Bl7ixO70Fwey9TPV8V+l3yHG4n/glRLaC1zSXDMDLZG5r,iv:mt7g1QpV4K3vcgug+SSGE0IWoZz2lKBcp3OpGib0LFM=,tag:7m/LteLOhKuaEGjvYBKR3g==,type:comment]
-#ENC[AES256_GCM,data:cMgWk/vqcXMLFRNvZnq0a85sSVjOYZ2+auHWGESPZdkxotmgOeHNdBZZoW2XC9bbReBp27WCycI7dJAGRTm69en0K3F+9ep/YeP+vwcDpmwx9ZcLpi3PBHb517NGa49XmTR5sAu7qBYX1ubmdCaRs1PQwNpWyOcJ3QqtOw==,iv:MVAQk1LFMUlwXz5yOHTKuNay1l0rYDscAyu7rNOlIIA=,tag:FCeKjq+8GdSzNzQMpTjgtA==,type:comment]
-#ENC[AES256_GCM,data:F3+qhzGdv3yZyiFFjtKgfoFOhXdTG1BxBo7NVXwZkrXmuMNx33AIZ2WGVpwUCiQI46tOu6YuFFFpgGj8QSiNCZKcEGB5ousQMnebw0K4mL8=,iv:9t35y1ls+ZWjfsXll4hekaGaaXEKOikqW5RZWzdZkgI=,tag:McFjTYqdBXoOvfJsPUkJEQ==,type:comment]
-#ENC[AES256_GCM,data:3a4z1j9u2327FAupSgHhpRiBenNOkOmr5zoqsa6zx7icMNE12UYBt/Pnh1L78S9W4jcL51QB,iv:enW7rH36OfkutuoCt8b86XqEu01bP5xPxxoYhy2s4mc=,tag:r61sqt9mSWzseRO8RWnbLg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:7XIzRcOTsyYBsN2Q,iv:/ALQrElGK/yfDyzENKpzF7ENoQSQ7rfa/ONEKZfOmnk=,tag:vOLKjxMlNJ2skUr/KdVRDQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:GGl27VXeBPxRD2F9ePMNja8=,iv:X4Pznp5i1gtztZ1QgT2dqeCPAGpZ5gjKmgOM9vFR59s=,tag:9MKH39kg36JW8d98ORTmeA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:MekozMc2JFEr2WTFc4X2kjJGkFuKsxNPwQ3/ojXjBHA=,iv:5Q+U5XvRx2PyDLonrhe4D9KvwPMgp0qzZ89g7enmp0U=,tag:QcR9Q4DU64aL1rYwO6hDcA==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6WdqgOTRd8/DSBBx5VObHueeyrb7JCqg35fcIwlJN9Swm2bJRY6MdA==,iv:kqBqOA3ZZqGeQSh6av2eD8To9tcJo9kPMv/7kyDOurU=,tag:2yCtighDilyH6anD5Km3oA==,type:str]
-#ENC[AES256_GCM,data:T5JVZp3lfCSAojsmaCrugdKDhn70U0JPBzpsNn4j8R9YtbWd9+3ujALjsXEiRrkxArp2XFxTTvJ0mX/y+Bh/Ag==,iv:GLrDseT4ALXutrWzKCOC9IU4Z/uE5XKfQOIFh0t4MJM=,tag:RibYPA2Dt5u+/qWTtd4gvg==,type:comment]
-#ENC[AES256_GCM,data:n+deOMlWAmynwU157XLpi9M4t5LmNw8J/3ZWbCq9N+vDa77wqGvTtu+Vt5O43c6KFhrNKA+ealI=,iv:yvVQui7VAf42xljJTuGyUJVek+2c/XcLznYFl9c/Bvc=,tag:330A9FmKuHWvxaOjMzZeDA==,type:comment]
-#ENC[AES256_GCM,data:5MTT5Vtga45RymbyJtp80C6YpyCOBtO2Ug==,iv:7Brckci9IFQV0LltKqAvjuJIvNTIpFXeO3HgkIhZHCQ=,tag:mJgv4CM3/hey3Rdy4jehJA==,type:comment]
-#ENC[AES256_GCM,data:mKYFm65OBH/Uejk2vRL7ClG2fVFcZcCw2NilQaYpezYBQwjzvjxn6EFup6eS0gouLIM2cfY59wc1nAgKVFC0ukahiC6tIMjLucJY7Hk=,iv:bF1w5k/jlEF54ZzzK0wmi9Ae9SAEyiqYIFX0ASRhyRA=,tag:3g+nGZ7fDSAdb471Cc1/kQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:yoQSC4RgZgD2v+J5GhU/matw4ugx0fzsTDt8tZ4Gl/o3JZ+ZoaoDzmv5yrxwSzM+,iv:HsYjs13qg5MQy0hJHQTiu8+kN4IFt5lpQivNLXHizio=,tag:MCWBmHfhNUwWeYRmk1Q3lg==,type:str]
-#ENC[AES256_GCM,data:BbqkjVqke4ZTEObrjWzKPYpg7nb4UZQYIadTgr5cwHDNon7UYlne0KVbmcjVCXPUPT8ahKK0Lhpx0pItHU30wnsgjfoHkYE=,iv:NvrHn0Iv0t4huGBpePytX4hCg2rAlKD9QhvAr1RWDf4=,tag:z7WKWL7Dh22duA2kD6U2Og==,type:comment]
-#ENC[AES256_GCM,data:Y2LnkNcuq+wDr9TDuXik7n6E3MZVhyuLhmke5afaZ6068AI/Tn+o9eVF/hldd73tHpNrYWpn,iv:QkbQpqvDagau5Ybp6vlW1Uoa2lljXMAYfKYAFRVlBco=,tag:tp2sI9B/cOhP4e1dabSH4g==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:dC/4h0SYZw==,iv:x701k83c3uJJG5Ma8Ee1Vgrf1gaURMUb861fWdMuYsk=,tag:1CuiOQZg6MHydQuGnRjr5w==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:wx465EVuAh13RjqREzxHhYFhAJI=,iv:0hnRrwj1zriIHq/AhYfinms4JbyuAyu3TxRTc7h9zc4=,tag:uHOtZ2J0N9jXiSU+QT0l1Q==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:F1LGfgO7Ef1VO6k=,iv:CAezR2DPEBNh0LbdbHg1qa5x/SOko/DxMwSh3xNIeBg=,tag:ck3Ti44xq4jI1fNLB+jxrw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:IRLHFdF6zzy7YbF7rtLp,iv:fCPZB6E0WGsXaq0bVRBeb82IvE7dSnV6c/GIbKdyPF8=,tag:rCVYI403GQoUwX83ZnddnA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:TIm5braQE+K+fjy4xEcSsn8x4hYZ5TUpIg==,iv:QX8HzF3YjuIJ5h1o20xVxQOYgYFgZAtNp4lSk0q0UGk=,tag:TCbuo7hqEX8fGRuJRquAcg==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:0xBdJMoqknrJnRyWbJyVaF0GmaDkrL0N75m8PkEF2w==,iv:quV5vGSxlMIbQw4sAfANYTjx4vdqVHcHWGfF2oOokaU=,tag:LVKfQ6UppHEle5GXllZJkA==,type:str]
-#ENC[AES256_GCM,data:OIKGeONHG9NIemkiNpUVfNyPZvi/PHre7BSvkUkqAJ1PcesIdAM=,iv:s8Km4YjtfY5JV3aFkzXGfP7noYLGzxZ+Y8jRvWa4tx8=,tag:WK3skTovE3CoStx0gkeJNA==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Hs8PGKtDZxTAttGHIF/ZLOOLycw=,iv:MrrWV5h3rsr+6zNWFehNdrX8nyOFpIoX6SYKIralqyM=,tag:WTpTP5Y/xQhyyUE2uGWUgg==,type:str]
-#ENC[AES256_GCM,data:TxVC3N5UR1o7nqdhEfE=,iv:16iz78tF4W+fo2CV/jbjQuMvqZq22RNKKMX3/bnHnBw=,tag:+ToD/f9Gd1PiqahEFjE64Q==,type:comment]
-PODNET: ENC[AES256_GCM,data:iiwUk3kkL6Uh+DQPAQ==,iv:hdc+SvvucPUJy8r34O8Kbc/bvsQswn0zJcgdYjdbBW4=,tag:HuhVAnkLATDW0oQBYEDy9A==,type:str]
-SVCNET: ENC[AES256_GCM,data:tWU7n2/oj5R6Cj3mVQ==,iv:SHO3Xp/fYU0M8bLmezP1+DeYLxLEjg+49eMS/3tuSlE=,tag:1o3EVqlx5xTlhLwhrWLX4w==,type:str]
+#ENC[AES256_GCM,data:7ssgRI163bsEbGAKWrKtq37ERMfddMfbVhY+c38oU2uM9jn7n1jXtQMBHa+aIgszPB4Qy/uhdNFS+KzqO3OsNMs=,iv:55sglSZqODN4AgCj0sLRqzL0SU/Nbqb4QfcZ8KQLJDA=,tag:YIxLTCOOwaujZ+olb8P8Rw==,type:comment]
+#ENC[AES256_GCM,data:+KYtldfqs89C/41xkaMj6CXK1v6p9bOfh4/xjJsqH0vl7RzMwZ0PkeJkG3A=,iv:4EzVDaWLj74ZZgeAu37LhVdLhPdolheK9/pehGnc10w=,tag:HopdAHBjbtIo7Qsu8KiJ9w==,type:comment]
+VIP: ENC[AES256_GCM,data:+KFrD/JtTO8e5DkZfA==,iv:/vr4ZNBL5jZRrQAhxze91UHgEmIhb/XGF2o/70SK6mE=,tag:nYtjyF1wn5yJ+DEuISYSCw==,type:str]
+#ENC[AES256_GCM,data:1mTwRLUe7KXhJLMv6J9sV0/knV+BhrXpkqUG,iv:qoBZoO6aisIRh9bb07ZcoGGOYS9IBMS0bOK2pILEycY=,tag:w1T9aj+yo+exboIy8Pj6AQ==,type:comment]
+#ENC[AES256_GCM,data:RY+3jmbcztsgn2IvCPEYPki1BJm6e9BjfF1TjQv/dqNATwiSnV55iQIw08GzokvK3C50NLuBlE6uNVdh212+thlOE2+sbIL8F8dEF/rDqFUL6zo//1dVShw=,iv:+IldR1CLtWk0aXJ61Xvy9TADHPvIRlRZ9KEQRlGH/RU=,tag:f6LsYbSRPvOUrHPtE66uTg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:S5pz76dKVdjSszYzf9g=,iv:kpAD/6poeGrXjIgPKs/e6Qdqrfg0HUc9g1DWfaMULUE=,tag:KQjh3EkZGTMtx+ZprxLXWw==,type:str]
+#ENC[AES256_GCM,data:B4h2pcvlzUNZ8ooa+ZwsMnCDhO5Z/DRSLU6h3dv92+en2A==,iv:wdf1hBLi1GDoFXgfvDjoEdSkruNzofF1bJW+WngUxWw=,tag:IoGJYCpUL0rfFrPFRUB36w==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:F6J38tAiHlpa32H8Fw==,iv:DOMSifFYeAMCGSZy6lswOupHsIbX/SZeO1JGmMgyXdo=,tag:zHOtDsP1EZAwtyMOVYZNJA==,type:str]
+#ENC[AES256_GCM,data:ZmLF7qSHaL6Y3Az7ozWbQKUypvGZ+D0Mtr1GjMFYojBrPmXJg6m2znFOw3NgQzg=,iv:hlKtokSJ9eTG4A+0Pq9huymhAIM/qoiIN3s9B9cmswA=,tag:nAi/mwrgOm5BRlw4POOntQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:uBnt6Dp6q5vjM5q9XnsK1AWtozBwxrkCqn9tgX2PLA==,iv:5S96myZp4AOjR3aRY4DB1nZIrUSrxyHTkdtMNN74SiY=,tag:SMU1kTOp1xJ+VZ9KNlP5fw==,type:str]
+#ENC[AES256_GCM,data:vZqs6JR5g9vKVvdTWy686ZMN/WPh0wIYxbC8sQhqH2XGWU7wes3TkzghJSRt5am7g0r+Wq0aVrgaXy20SYD16ctZJ1yYg3AOhj6aCYKVD62UXg==,iv:dJ+BvceqcRXwfXrL/IXAJjQW1K6ns3XlogtfJtpE3JQ=,tag:czWipirE/t6G3SttxVd5HA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:ygKfaeQlck8Zsso4smYg,iv:e1tLgSD0nyniknHnC3D3cWIIzN8OXod5n2sYnJR7rvw=,tag:xs0aq7UhkAPROdSGXrGIkA==,type:str]
+#ENC[AES256_GCM,data:f39ydw44JYXxYGqYo+9bCyyihhsqCbYaztHYBSuVrjiG,iv:twEICkvCZ3sAPUtpmOFIxkvlwn7PJHe2TynykV0Oa+Q=,tag:1EC/iNyv3I/JqrwMFxWOWw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:9ed5BbtEX8g1Szcv8gpf,iv:kKWIAttLh/eVv39ilMsf3/guu31Cz4VFMTV5nsW1zfM=,tag:smSUhYL26FtlNQLXgu4wHA==,type:str]
+#ENC[AES256_GCM,data:gSV/Dy/IdadZ85XK78urs3ISwZusjKEkZTQIOp+kK2iPuu0yAQH7e+qviFbgT5WiMRh/Rc2zv5dn2PmJvOCEREQy3+RIo+CMG+jFc3WsB+M=,iv:ZRJY8b9sSnyDOhGPdubOjP6cxxFUZQq8i679TX9V/l8=,tag:0wAOAyy4RfVRipSopvKAJQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:vSJWDmyly7fwKLAZDwJo,iv:1Vl+/hQcc+tKOJmGaG1BYGGUgi5aUmrdBiGEK91476E=,tag:QaXxYh5CjL66m7DfWs4MJQ==,type:str]
+#ENC[AES256_GCM,data:OyHmoyjaF0faVR787+jphZwDydrOZgYc9BE7to7rGQqz2KflQAIHeN+6ZuIpMIM/U2B/Cl0hRWfCQELLD2Lr9KieT/DPtdXZqR+i8iC1/tJzKr8JYswq,iv:CU3y0VEVXO5K63xVzDeTxmVJWPwv77i178oRoI6B30c=,tag:TugfVmNxGnxzGxuFPEu2tA==,type:comment]
+#ENC[AES256_GCM,data:4zOMW1ZDXksSlVHGrJ3Aot42xCS+wfLnuYUjWKhhCteTLS1vf4Ij90zSqX2Wq0HwjMk/Z1m9N+0uvsRNy9VcfUjslzo4wnl7hH2e54tarhNgeAP99kb8kPeK3W2TCQIKecJgtqduipKj6dL5M5WGrF4uTpODJaiW4lpQ6w==,iv:+LQ6h6y0uAw0aKNiLbbwbC1vt9F9Oh2/GSUcL6PJOY0=,tag:nPkm2cL4tm2KnzWFlq567Q==,type:comment]
+#ENC[AES256_GCM,data:9DZcxqOJ3iYkyCw1U5CcyPrIDhsqhFVESeBtSZVo/bqWQ+7IvG91Zb9P6G0A9AySXlxvaFNOrmTmZQsBqVjXNG8zb+iw7BZD10BaB4DXJoY=,iv:DdR+1Tb0Xy6Y4ZIIkAQTkmGFxoast6DnZCZ8a8dAY+I=,tag:FC7uj6VmWOtIkWOLkEhL3w==,type:comment]
+#ENC[AES256_GCM,data:iTR6ulMbjNwbC7XTpaoA1IaOa3c+Gi6BUkkdJZxXBf1+d3m0uHNsJh37vnvqrg6DNKFOlhqv,iv:+0hzp0CbyJ6JdGVquiUdOYSJO10gJXrLE6R6q6nWapU=,tag:72EA/BVUlYM2w6G9+095cw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:FfqqXDr9A8fSg1JI,iv:9+uqdbCt95pqSBa5/UaTFkxPrnWYGk7wj3mRaNRWAKY=,tag:IXu449xn2gGrsL1I2LSPQw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:/Jx0TU06nUNssAj2oMZRW4E=,iv:X0NyfDLg9EP4MdQ46ACE3GMcMGqKM2q8fJH4bQ1B/TU=,tag:b2KWQPzsZvDux4dWAViNEw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:2UWxVHhqNvXVVxg0zw90DYFxjE/wQcpQVmDp/C2c4tw=,iv:ik+AvCzG3umkdQ25j7eWkKZOu0yOVQlWcwH1Lzek/kg=,tag:dG1kdRcIYJBec2k2tfKxNw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:9+ikMhOF0ui3hIyBKjay+0w56uRMRld/mQxRk3qNdaBP3KWRVavUsg==,iv:wzarzHZ03Me9r/KaCHYbhJuLAO4Vxm+VkPy3U46c9+A=,tag:jh5RAaGPo5teLklGHdiMYQ==,type:str]
+#ENC[AES256_GCM,data:XRMHPqXrTLICFMnSrlOPyIQUH1VW83IQ56qvIESxXSBY8P3cFaZuVm6S6tpkTAslo7q7k5N74H64GZRbvxniSQ==,iv:KuUrIFLtoU1olVRC4PEMRxhc6Xa/spsXmadpY8MQ4MA=,tag:fsmYdq0hY6OkpBsrwsPp4w==,type:comment]
+#ENC[AES256_GCM,data:n83DMzeTbDX70EHEzo9W2vZlcAznhnEfGL9LIc4/MJFkCtzZEWMtcccSIxqhnBk/xg9o+oiHysA=,iv:dPcdQLGCUHyWvhbYz1NXnkG18jhum1+lvpYg/llmodc=,tag:mMwxteDkW73ZzYQ7PFx+9w==,type:comment]
+#ENC[AES256_GCM,data:o0TyvME8E0RxuC7/A9EyvgoDcrb/uCmmmA==,iv:phizgpvqV0FxWn/riNriyxZ1wrmxqgU2FlYWr7YyTqM=,tag:u9dXhNiSqdJPnXbNmvnUkQ==,type:comment]
+#ENC[AES256_GCM,data:BNgDoihCrjmF2dbuEB28R7Fa0T3PI6CT9TtbfMNICKlzEqVlUfi6iP75idCFlgXi08fwnx76h4ESE6i8qfKB0wq0iSwFC9r3cRKYUwo=,iv:uwin1f14cytbViRgTqL1UZQzAu6Nkh8Tuu3gBJ5h7Ww=,tag:3JAnxXIQP1LGoWIy42OycA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:vp7YpTRaPr3vTvIsWvK7W40jNakII/R4ogwlyugC5izkhHXc2wI1MHWXpVpX4ZdT,iv:DaOhrv9H8ft+WMlWDvwX0Ud1Z5UPOEDR3cDcXQLM6ck=,tag:WnG0HjugSFSUX2Hjr3vwKQ==,type:str]
+#ENC[AES256_GCM,data:3gxZnIElJ6A+Tr0mS7VmaA9aGzkXVazVgFi0IbzXB5NvMTfvJ130TXpb6dHxlIvgP0n5VtAa8q44kZsBndLdBVNODbZxJzI=,iv:AZLYEtOYtTkjI9L+tgXl3smbSoQ+LswQo1G77iQvXYU=,tag:pm0uDU7U2+WDWy2vLhXlFQ==,type:comment]
+#ENC[AES256_GCM,data:tjzZh0uNrZ5GoJb3NYgeTpSqsNMPz0RGxE3SxQQkTYqzqnVbDGEWf0QKZbPmO998Bqma1t8p,iv:PVCN1zI5Suwg1Sdg5t8UwWAWD5v1/17QYglz2fewRoI=,tag:BGDBBbCAWNmJH1hH11uPng==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:AWbP8MtwxQ==,iv:wO13QgiEZ5qL/4jMd/VsJUxdJaM2uSv74zhG07lNxOM=,tag:FfWcBql+VC/ymCQiljkbYw==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:wNf/LpNe8/01q0wbxX2joXhIvc0=,iv:fmmh9vcglrT0Qz55KvhvqKSU4LcS8pwzPcKSujGcB3Y=,tag:RhrztoovKq0PxgU8npORLg==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:XJo8nEwW2iqw7Zk=,iv:lYJB7VCvU7ZiOwaHvlnniQQAgYXPCMAAaqNI30VLuI0=,tag:Se7wgjqwKxTe4CP42EoMHQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:2DL0TOpCWtG5j1FOqd9l,iv:yXTQJxFpx0MW2vMyfPhiLtzFnH2sA7qSC5kiKp0XTDQ=,tag:rrjBMBLxlYBmChaj0OuVOw==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:32Y6/HDeUCIMlDi+L6yt5qsrQ3bdMPsadg==,iv:LhyE/o2iMlgyINibqPf21x+Bq/MRWWsc3M4L9L4gYU0=,tag:Yi6VKrKV9J249Arfkkq/iA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Kx26I8sjz8I5GsaKIzFT6MrNNdi/iHde9xTTnjzEjw==,iv:SmZZybymTP6+mGMbPKEdNMLl0IPxCInc+y4xPYN3hzY=,tag:j/iMvWCXU/8qXaFxA9vUzw==,type:str]
+#ENC[AES256_GCM,data:oJJsegIL+mHicck9xhFrbmPuYDZX9QUWKGt5nneKfysw65clajA=,iv:NyRVFKfRJU4+ZCEXofOfHRwRRhfeh60RM6P6qGDyHjg=,tag:vgGfuflvsazXEUm1sdqOrA==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Ty9VJ55O+B2tGAOCEHPKPejvPs4=,iv:iXvb+pQDSvyo5lVbdZEeEDtLAR+s9nE2z02/wefrVps=,tag:GL1eHbvdaQlTp09mMFT6tA==,type:str]
+#ENC[AES256_GCM,data:PMoIWy2Tgce/GIAXhzA=,iv:edUQdod5hJG/ZqvnAo1SdPTfBtyDWqlE4IBPety7mlQ=,tag:UefXmHZ00dflqdMC7kux1Q==,type:comment]
+PODNET: ENC[AES256_GCM,data:vq5WCVPT5gT3TD3MRw==,iv:4Sbm+NU7M4zdoFfFXETom1kOx/V9hPvMre20BeK62Q4=,tag:EonmFfecXJ/zegDjPofQgg==,type:str]
+SVCNET: ENC[AES256_GCM,data:TvcKbNPPSFi93id7HA==,iv:xXKR4NDCm3zfyMInWIRHjMtUdKuxFR2T7pf9ZYKY5Jg=,tag:/rQYnPPYbeqbb7hd6KQjDA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlYUpvVE95bXVTV3dNdkps
-            WmVWYUdQU01lSzBQSTRBK0R3dHpnR2ZuS2hZCnlKekdaREFlaDBvclNDdEluSWJ0
-            dlhzcFg1YSt3THpUTk9IWlh5b0N2Y0EKLS0tIHRSRTdoMlBrcWVmYkk1aFJqR2hJ
-            aXNmaWhRNTU1cUhGeFczaXU2ci9tTjQK6NN8n7dFACaOed+DtDlqUPdHa/nGaOrb
-            Vmp2vfG0c1X+PSpgHveS6SJjtf2L6DQIu/4QcBf17dfJhZ/iP8Bhgg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVM01nUWE5SHF6WUxXNHBS
+            Q1RPN2tLTzhCTm1IWTcxd0JKUWd6ZkxWMldBCm5iZDczV1NLRG1mMHBlWWpxZ2FZ
+            M0F2MjgrOG05RHZ5V2RHbVVPS3hWbG8KLS0tIDRLSkEzYWgyVG45UEF5RzlBWkRj
+            UVBtWGNqdXNKZEh1Q2R1T1BIRFk5ZXMKnhcqOSgNeBaHdEHnsJF0gpRSn+Q9wQoP
+            HCoafsctp2djOht8sOWsgaNVAGU0f8VJvpSMp2yud4PJb5ehlZ4jyQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-12T18:30:46Z"
-    mac: ENC[AES256_GCM,data:qD0B1ib//FY1xq4Jvn70NqnCcKa2lbG5ODyBME0kuSCcxtasLx1RxvhfdX095knE8zE0mcWu032O+21VY/LQnbl2Eu6jY4rmhABrYWmjuj93gwdRSQwQKZQNxHoqEUzqQavhNkItGzAxt42V+pEkt33z9Fe1YIGioux6ImF5kF8=,iv:VxCG+11xrLH4Hy10BI1msI0dCNdhk08IsFf6w/YzVmc=,tag:cx5Py8/gn/ImKl2RsYdnRA==,type:str]
+    lastmodified: "2025-01-12T18:33:25Z"
+    mac: ENC[AES256_GCM,data:u/PbGk6ETI9PXshXGFEYLd1YD5KgSL2rqfNC4BS7+1EjAQzR39th+VqhdHnbDhzM/gMppzJim7IpSOdls53mgakUx4Gxb6aSJoW3/ERM4evb8fz7SqdBVEcMl8U/YD+NVe0PbhAWnOqs2bGLVr4bzf7tpCsyykz5w4QHQbTFw/0=,iv:TG2k6skXj4Z6g/Cef4ibEM+OITz7cndw6WPxTG7fLmw=,tag:soPITEHxHMHTAZFUITlTZA==,type:str]
     pgp: []
     version: 3.9.2
