--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:Y/KuOAajalpWvdIeXQ+QnhFa598851RmWDn19MYtKL/zlpH7eSjJDB8rktR3k6kbcNpKrTK3ALDg7vVrUQ2KuIA=,iv:/4b/LhGyjIE4kH/J077gV7bCPZsgicmGh5WdgddF8JA=,tag:RTwoGFyX6fPEjYCCRxzrqw==,type:comment]
-    #ENC[AES256_GCM,data:+KlDvBhXYVsz+riKFV2R2E4X1t4slGLmmvo8AFGa6uUu0JtlK+k6F/+GCd0=,iv:lQsBZjYPOacqPNrnjO9uLXtIzG0QQUR8z2XYpwHFlG4=,tag:A1vtvdCJg7YQqmQPeKaM1g==,type:comment]
-    VIP: ENC[AES256_GCM,data:/cFusphiuRE+taWGcA==,iv:qT5EA7JkwWogDmxmukfe/G8K3KicmnQd5eF3GsSpVx0=,tag:+vT0Ic6Jh1zFCDub8YCLEQ==,type:str]
-    #ENC[AES256_GCM,data:kxqyH/Kn3KW0+Fu+ZFoErEorq6vThvxc0vAa,iv:uJ6+f3p+b+SjcHb4TPjE7idlJvh3u/2t34baz/oObi0=,tag:Ia8ngB8x+fxVKU6XtAsE6Q==,type:comment]
-    #ENC[AES256_GCM,data:SHcxqkL79YTI2pU0Y+wjzU5csjLU5YpBkJ7r+yp/jxosqQM3sJloHOOvMN1h4jhxrEZEpRkq5DAnDqTs1eU2zv2LLJ7OaLIVbUl4JTv/ZVAjE/JdJVis2cE=,iv:gji8/VBJplueqk9/LR1M1EUdRSOAM2AUcabmjJzOdYo=,tag:Wx0gzeZeqM2DTslpK1iVBg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:KKPqQRetuO7SHsJ+qSA=,iv:g5QETtDfYpdPmN0ZRee5SpU8vWsJuDdR34bzun1HNR0=,tag:TaNdv2BZVrSXvnI0WfHPEw==,type:str]
-    #ENC[AES256_GCM,data:e/Rq6quKAdKnUsDhfNQOW3au9QxhgmoaOJqWsH9F3ZyHrg==,iv:9rzpZosDBzrNQF7ze7S3enSdZvq7YlQe7eyMHJ5AC7E=,tag:czZI46uo2HK0+3K5ESnRcQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:jee0YE+66Rb4P1R1hg==,iv:QE6QeVZIg9Up+JrcR/V+H8/9XaQ2JPY8MuiU+nFoH3E=,tag:CFmSwJg6EoNCSBoWEDuh9A==,type:str]
-    #ENC[AES256_GCM,data:hUjo8+EQFlvm10Gro6ufp4T5PnRxXdmko/W3spYKJH2uWzDMTeXdcvHMNefCaOY=,iv:VGOIwdXQWpgHR2brE1l5d76cnDyvcz7Ju7HhWpoikD0=,tag:g0S2SVNaja9v36RD4zIeEA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:2jck94dSP6QFvlQSR0+XQ3BgDdYXGFaHNq5pofkxCQ==,iv:4iofMR1lUsGZIBErDhBbGeuPN6NmgNVAaM8slkIAQIY=,tag:qAOLu3uu9/9eKpQoaEjBJw==,type:str]
-    #ENC[AES256_GCM,data:Mt/GT2SNbsoF4vu3MTXs2xCYKVDo+0qs+Ox0ewWDRphsZFlj+soByixWLM9z2G8s/gvy7JCFRIIcmLVj6wEYt0KAsJ1lkDlDQoO/DBD0ToHIlw==,iv:3sVrtX0uHCgzJC2OfT03Y4TZ/g4qVuWjvr1B+P/G/sg=,tag:RiixNJ6fzkbOqGvnQo3oZw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:Q96CqwGkKJC4qH1uI3wz,iv:FedP3h534jmZbujEiny++nVdVs+Wt4MO9JyZjIHKrNE=,tag:zpV34P+0mpoLUnGV6ZKpWw==,type:str]
-    #ENC[AES256_GCM,data:LzLuBcrpURTbP9RKEemgU1ATSLYB84UasnVGQvkewNDU,iv:8r8KlEqDUSYrx4Kz7yLSHnLUxfYWdqRv48jWS9Avo4w=,tag:1YDSeKiBmn/Wc6lhpc+3hQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:gN3Cfp/w301cPJdF0ESU,iv:M2MeQIFk9VuC5gR4MhmjuETUL+/2Z/jzNr2EhJbk4tE=,tag:MeLuL4O0s4b6ZeoU1uD0CQ==,type:str]
-    #ENC[AES256_GCM,data:DpAcj9LJ+kX8m34k4RgWvV6Sg2qrGJ8YrdzoTtAnD1xgaYWOeA9gfB67qhYa1NVT3dSQ6j8RgZoS3k4Doy7XS33uKr/W+VxCYJ52EKQq7Bo=,iv:XJeQTVO/ACXVUplDf3iAshFG42CjY4Q3rdD4Hr1pWic=,tag:O/BcAR+52TgOpRcP6kdExQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:SoyGUIWtajmwzvVvSEIr,iv:/Ed9sd8xdVmTV688mW+8WMipwc0Z/2+jptEKRsCO/zg=,tag:DUf5wK/NRi9UqlIslq7/hA==,type:str]
-    #ENC[AES256_GCM,data:lha49JH58t9nlVOtmssDVPo1aC79FkUYMcapO6ukPsbXIV2PFysJC69yjM0yBv2g34kfbEOg013kakBpHNNCITuANIRs2Lt8rqXbXjJZ7yN+8QrtWEK/,iv:t5qmiJ1/qhZ6s3z1rimEewpMAi/3Y7PN4+lLLyHPPWo=,tag:vbPHPsAkEtBNan1GeyU8Sw==,type:comment]
-    #ENC[AES256_GCM,data:9m1TgGY7bpq43vDrCHjoS/PFkKjFKfLJUaLfukOPTXXCkVK5wFi3bkOsdazwgNHOm83Q7aFWHoY94kKgEBnwKJiteYVUoiFRKHcYP1UY4BiTuQWhmOGmE8EvvfDlSa+uASyObes20uPVOklB+wGMKxGJkJvYrKI7Zf4gyA==,iv:0xfZ33fT248gWM59LrHN5Iq19mEB1/gCdlWpmFY2dzk=,tag:Dx7eOVC1Q/jMoTqaBCAnLw==,type:comment]
-    #ENC[AES256_GCM,data:XswGOzgwZrjmWw3+9HA1xMx954JbXyP6JLHW9M6Xg5eS4ldduV8LUhn3sTskQENa2qSqiiFvAtc4G0OdwAcziDNPND+U6zQaUNLS96TsuC4=,iv:VHrPgUeQnfD8C/M1Mz0eSrsnC9u5g6OEpjx213dVHOA=,tag:wuc8g7ZYqm0mFGASTJ9v/w==,type:comment]
-    #ENC[AES256_GCM,data:uO4PziZ4pcLOaH7GuBpxIfiQnr3NA/aQkqNp5exBcnQ6MC2XJ9tlB7cZ8uWOqusZrmBT09vc,iv:RqdhOc/Qh4UGzSARHg//h566qyZ/82ipcbv1T0xpPOk=,tag:U+zpX7royaN7jeRFVKYleQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:C1Q3akpckNs4M938,iv:UCocmR03ZBgni24x4TmcrPlyXuveI4NE0iM+u3qO0dY=,tag:904Q9isumjn57V5iCo1UFA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:bOrKt0QwQLi1BaFX/QrTUaw=,iv:VFXagILWPOsNyN602EKy9J9dGtdfttLzKnVrdOFTIC4=,tag:tsz/gVXH5TpDuUi0DZJLwQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:SZDUZL6CtgMbs7t6y+UeVidblTuRQuZTYCo4I+2dd00=,iv:vPuGwFimHe1EAnq3N0gQi2pCDzwmGrIW5HVR4dRwUnM=,tag:V+jEAj1pOqiBDJEYZO0uvg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:QZnSZPrdv0FN27tBZLsQF6NMSAtH7Kl9yZsMKaE7lBcT2LiS5vg6+g==,iv:Zs9p865FX5aFSuhKidmR+RMbn1sn1gJEiElCRX5hp0U=,tag:EsuV1nPgeqrqUZetpwxzFA==,type:str]
-    #ENC[AES256_GCM,data:VfAy50cu05sCNJfkF/lw/Sp3vxUl8CPouDQcBNh146GhKR6dT8SMgPs7ve+khEGvtbej2XdgnFL4/ZJx6zRnnA==,iv:Qr7qbEJimmkK8FJ1KYiD19BiVD/wa8dTwN6jo31NigI=,tag:pbSBRwCT4fZ2E/7T6w8K8Q==,type:comment]
-    #ENC[AES256_GCM,data:BHGt5zPS/y9heHZIKvA6oxTO4TL+bzAneVuVKyykHiXL4s+4JSrb7VvPtSDXN2EP8Rz0jjH++sk=,iv:EETQDmrCpdlzkt/WoNjj803zXc3fCmSR0CJ1u+Bung8=,tag:seO1U05TcG7He73ABYgT1w==,type:comment]
-    #ENC[AES256_GCM,data:utt8tVnSfYUWBEn+Tq4n2t7oAW8cWyQ8sA==,iv:hfojgrFvdCzLR43pcBlY2tcpWydcXx0yLRy4UlzrTcI=,tag:8/6kCD04qZOwkeZMr3OEbQ==,type:comment]
-    #ENC[AES256_GCM,data:HQMTGmVmiN17l0ZUc5UdAk72WW12VLUZHLfaWiu4FtXHVvZPpQYbavWI7ER5WeRngFVCSjOs4d+93Q/o86fq+k79+tX3hfHrhrecvvQ=,iv:FDAxt5LPut+nzxtc1zQq1Vm+tk+WCpSMpZPn8s6itmQ=,tag:tC1CD6nCpb8DmmWc9DObZA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:xxJ+1YfOb/niMLZZsXLJ6kefB6LGHYmZO8+q1y5zOn+ez1bVwBGq9aQ2eX4bFaZF,iv:S4fKnRGcQkdq7ODx/wVv5KUBUfD1/J+JBXD8rao4wYE=,tag:eC4VqlIg89qK5+q7DVmuRg==,type:str]
-    #ENC[AES256_GCM,data:8yeMi8nspxyXww44Qc9BjRA21Wqtox9HbcXAHPWufsjVHcGO7HO3yd16Sv6tLAPPz5LKJTSC09NaJ0F2v3bK3BuMFwTSwro=,iv:NLhCD3SppV+tGQ3ZQYeWhJqLt6qv6/4Aqa6XikIY3SU=,tag:/sSt+QAVww3xatszf/PQ/g==,type:comment]
-    #ENC[AES256_GCM,data:TVYt3lES4Q9aRQsP+9Rd39J89l1c5n6+Iq5JY6L3iv9Bvj31CGQ8RzY3i2q8V4Bo+xs/4zOM,iv:D+DY5WAxgcr/tky771vVjuFBEvNQdJOt+ryWFZ5+3y4=,tag:sLnAIiY0O6v6dh4Yu1OjtQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:LsVlkP3kmA==,iv:d61aJFMzM8vsL7zSMs/QCEU3MnakBVcJgu4U3O5CRqo=,tag:aKU9948zXg4eVBc4U/w7Tw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:ZW/gT6YhcdnPXnCuPVLK8inQVxk=,iv:qAg89/tNInf/Usn98wNxHA3j/3CWSmHF9w5fdq2NHkg=,tag:iWH7lNtyzU/vwxSkKJTv5A==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:PkslLQg+0NOQ3SQ=,iv:tLNwY3l5khNW7onxRUJ2bDJO2NYwwPLJXxweTA1RuXY=,tag:nL4Ye0CIbn5pCbylBB42UQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:ybyZony2OfhO59u+4OQ1,iv:NtrCZzwin2XiCOlnmGp5lkHLqvSvLdWxiDZmQ88VkAo=,tag:kkH2Ef3stUReDIvJiiMa2Q==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:MGf/JQGZocKNGMlFIy9aSuvXy1n65FkZUg==,iv:1BwniSoElB5RGggez8jxzpuv1Bn5ocApKfz3c91ZPxY=,tag:BBGfZlbWZs5jaH8bsjJmag==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:TdmaIgcFkpdp6G2RqDsRxyWyvqEs0STIfaCexHItaw==,iv:9zBS0f7eYyca1evVjpPQLsYy4gMb537n5m96xdkssG4=,tag:utmpGtAHCNhuCzdj5fJzdA==,type:str]
-    #ENC[AES256_GCM,data:UjWe0RieYLpqgsoTwGLWNkMVNqnq2X5B3I9Q5H2cX+MFq3tSs+w=,iv:MxaTAPtYKRd11NkK+F6sMRNsj8BtKCPdD0r1LzzJKfA=,tag:I4lDTOuRB4cMeQw0AtOoYw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:HO39B2dSBQlDsL2cdI/2gFdU658=,iv:KpJ8QWfkGwobd2+jIyQAXZxe92adGNL3DdO6QQVGxq8=,tag:9DinHpYS4gzX+Mu7fq17yQ==,type:str]
-    #ENC[AES256_GCM,data:c2O73TtRz1V4+u/sq9s=,iv:SfLG7WaIJRIXpgy8pw7v5vq0/bL2oYruVMa3+DPuJQE=,tag:DRgv+XLm4u/OVW9W56dsLQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:nh9tW8wEub1VRJKvFg==,iv:jmu3T1RXLmY8T85zyVh5fFcQX0/n+wqhOH/RiqV9Wo4=,tag:lP0aEUUBU98qrO0jJLd2bQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:U51DkQyPI4cqPFKMJg==,iv:Qosr9v1G7R28eC2QLuFobofeu7+u3apHQjc2Zp9wnM4=,tag:J7pO8+QCVfgZbRJhLCw9Iw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:HAALsg==,iv:PalJwLpTIvpjiQCvO8/cWaczcSuwMr28hPzjHVisdJ8=,tag:RvEDMN+mvlnndQLXC1w1VQ==,type:str]
+    #ENC[AES256_GCM,data:7+aHkwLH2nF5NNs8cCBzNPAMODEeA4Hg72afg4h1XAk/Jc5lV6SBg2aPFfMS5jqhthLEQBg8/0X3b1yVMvEi5HM=,iv:0ybvwGolyePA+zyI+VD0UBJ/AKRAlTFfPma7ypY6huE=,tag:BjC6tJuCjZandlegCPHJkw==,type:comment]
+    #ENC[AES256_GCM,data:W5Nn5Jp6QF70hlP5rJ2qHlyyD/2GEV8koRytFLU7hGb5PHlYVMg4bNnV5lI=,iv:EHuVbycREXT67TTkJXeN74b6Y1+/vKJ1t508eFDiamk=,tag:x3XHog9OD+OTNvtwbayxSQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:+UUCehGvmVpACU1yaw==,iv:CZApFvvTMQKB2mJlR+F6I/aUMUrZOjq3HSTtnKaWbXk=,tag:wHsI+sxmfcvm/UnHMJdJRA==,type:str]
+    #ENC[AES256_GCM,data:84BSb6N/7kg8XTIZvv5f6vvWa+jKS9JFdLem,iv:I0dFlXGJfXuRefSROYeoYdgknEvTNjSWZzJBuA1M67o=,tag:JZKfntsJrPtq098Mcw13GQ==,type:comment]
+    #ENC[AES256_GCM,data:JIh8P3gmvyq0dj0CTdGieV0rbe1yhIVv0Su1MZMBR+YPj3F7vK+/DHbFQ2SdsYDeZ9Wj1NhqOhnw9MtqxB99/O2CGA8GHqcT8OHq8N/Ddnkj46iNopxbEuQ=,iv:4Cx/aWU0LLwdTL7SyE4CYczDr1DXEcwhhqq89y7IF8Y=,tag:anReMzlCa+S+aLh9d+SAQg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:Nu+E9yZaoVyfdYFML+U=,iv:gBPXiwIhgrNt0PuWudhs6DtC5arb+b43doK7YgNwjAA=,tag:66355RvV9YvzSh1bPGNiSg==,type:str]
+    #ENC[AES256_GCM,data:p9Rj6bKQzzOZiP0znmq+XU4bTGY0phdSNWz6Og/HgILDbg==,iv:76oV/+aJ1FRljRAA7G9VofWhamTSVM1bn3J3GBVyxpI=,tag:KNdSr/UObFNeZWStxtQrpw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:8CZvba7nzcvk6CNc9w==,iv:d+Pyfr3drwTIqBPiNw0ar6eGw48RXLNc9ikZL29JMPc=,tag:7EGMsYKXzGs5I1dQosNl9A==,type:str]
+    #ENC[AES256_GCM,data:zVyY5XXRndzA7+FfYn6sypI/Dr5qgrnpGl3ea20RnxsGeNYBjQoNolRCP2jBsTc=,iv:E/ECQEdtipGB3GWtc/ir1eLa4RMnWVstur9r9BI3nLw=,tag:+nJ3RB4vxfMT7YGkRM36MA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:hWvuUJ4YFaM9nQy4PgOkfCdnwSckSztzffYtwupn5Q==,iv:FagofYGZMZ8NrS6oVMbus0kk03mDi3ywTbqhdlOJwqM=,tag:NcONTHsl/ki18lx9bDyA3w==,type:str]
+    #ENC[AES256_GCM,data:3bN/Ht5nMtkhy8ckitOPCkdteo5ElUsfCThFuKYDV09WEfDWx3+8NrYFTNG0JTJromP5bh/TEEYVDhl0Y+qvz3wuobPCDKSabQ+RYZWF3WfpCw==,iv:IPTVDqfkXA0l7JjsQGv5zD5hRfxOmcKP+o6P9GXlR5A=,tag:nJXgcBeJF5JVlZlRRyounQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:t5fF4H0gJUvPsa/rBEWZ,iv:NenR/eKOxzjvHvauZD89Ss8Zv1T1NAF2ccqRW3ihBGw=,tag:ETfzX6HVTm+3YN9w6zJSMw==,type:str]
+    #ENC[AES256_GCM,data:T0KcfsXeLemFzrqGBWekAOHLZV6ExL0kSH+8mH4vAFhQ,iv:xQXlDcm6kZYZLu+K/HuXiV8GzKdBAOGpxuaD7v81aZs=,tag:S4C4uJRaMYQYG8nLLo9d/Q==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:o4WRJLGEc87jWOi1tEE2,iv:GNoI+JlRdd90WujK/J/YLefOT8nyTX0Lwv8ZzxqvogU=,tag:XTcKALI2kh7BkgOeLsiS8A==,type:str]
+    #ENC[AES256_GCM,data:eaOBpAQZdITVWo9Lr5Jkma5iL8fdEP0cNT/bOL5EKcLCmkTww0BzvxMPT111utmSay8kOWI28ANZXkoCa8/rW8aJrgk/s71TbEOA2MRK9EU=,iv:lqtgzidC2f3uazJXRPs+3KRX6dgF0NDXV+fyYHMExxg=,tag:TbB7ACKCCk2aSkgD7kZ6ag==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:HiJUda80BknWtxFBOlDr,iv:+PTxAfq4zFVcVOWQfFK21z79TrRlaJYzrUPBcK0kLGY=,tag:6eS1S0zjMXTCeSAnBQlUsw==,type:str]
+    #ENC[AES256_GCM,data:HeeTCLUKg8dDVLJaF0zIxWBrPv8uVbOHUEd1RS7avaAqlcgp6RD4MKRN3COKBNPijxV+KssCZVP/Rl3W0lrCGNiCfv4l8iOkUL34QkT/0y07zfVTIHQP,iv:LpHts+9JtQbr4qBnEJJthpOQzvG11Qpde0Zs1VLjENk=,tag:xs0nKJIqBKSHpsIf8kX79A==,type:comment]
+    #ENC[AES256_GCM,data:sLOxuo/M1AclUhJPbM9wh72uMBaTuoulFtnnJ43PG/ZJr3GGNq2szwsxrWrS0e7fpHxHes/aAyrrzJ3fgZvSy5giJhKFDObJDI+cXfAJPR/Fsz+PvohqKaOW6mM3vp/BwOk70n3bK7BQDrDicW6B2dtMuOiNFP7zpCiWMQ==,iv:ixt5ZsGzBI2JySi5u/KOB8+9r4a1FgsEGp2YMnVkxeU=,tag:SpxPXAosplbZiqOY5FBKAg==,type:comment]
+    #ENC[AES256_GCM,data:oiQ1C6gj/1gwnMgwMCI62krJie0hFCtJeJ01vXNR/4D9i4uLaSig2dEKKblUAcNEKPew/plGTgE9ekwKHQQ7UNKDjYVQEEkiFIkQtsDvy0k=,iv:d5EphixdAXGNs2u7CLPs+DojFenchdxfRqm+Oq7lJFw=,tag:9lhObpC6AKDURXHuNxJKiw==,type:comment]
+    #ENC[AES256_GCM,data:yCI0/qf33y0Ubsi7ecRKVeZ6Yync0qxzf2ieRh/L+7mVZBqJbLByLUuD+Hj2eC3JPQ8Ga65X,iv:+z5FgvaQ8vScu1RnZHggz9WERI2YuitMV3/1hpLeD7U=,tag:IAHHyAlHRxNbaI1TQUCB9g==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:TDUvyQ5jU9opIhMk,iv:gfonwDL2h22LSGm7QWSkCl43oiymrP+Dv0J7ARps0sQ=,tag:+fG7CG5FbXNE/Zf4/IEZ3A==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XkZBFgD/URwOabiYP+Ft5cU=,iv:7zTFLkjwXms+axq0sFZN/Pljq0oDCZtuXc7+wJ4rArI=,tag:JKdIlGblm8lfCUosQvWtxw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:TTdmdqIv2Hb8hqGvm/A0PUIv0VY41/CgpX7gWAIadu4=,iv:GcZ3qWrQleXpyazY42h0SzyND5yGRMN8P2RhI/9CH2M=,tag:rh7+xx55wgr1OXV0PR73BA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ANCDtCJZXDgjoO40bH6BVfl5H/qnh5njAPT5q7MqfPIELUe6X8lJUQ==,iv:W4dQdOGkMuNPFHwfQ9M8msP/lZj2EECZfR/QX27L6M0=,tag:AD/GnKrhesxgUzPh+f95NA==,type:str]
+    #ENC[AES256_GCM,data:0mnwCBP96vCPfVMAPorQyWs+ZgwuhkuZeiBtZazUjADTBObwfXuFoQX9f4om8UGR1IP8jP2jOLrOAZ/0djT9Bw==,iv:Istg70ggQuAemfoNI2sGABgzj7Y8UqeF9YUfSMDxTNM=,tag:E1cKU4xx243bicv0IptkcQ==,type:comment]
+    #ENC[AES256_GCM,data:t0km7r9yThJvNUVgIS+uTDuWYRZ/VDkQjXY2QuxzY6rdVZwZBvNmZt7BVCP9eXeOsPFkv5HCZsU=,iv:bDpGpLOZ3ls97JB0N6PsJIj6mwRO3YfC1DKv/ekURU4=,tag:ZLcGzkqsAmh+SXb9D2SL2w==,type:comment]
+    #ENC[AES256_GCM,data:nO7vfd3RRddhLCZLfcuM5h7IgyeA1KYsHw==,iv:QL5gu471vgxonRejJC0116c0KETsndm0KhcrxJz3RPw=,tag:g8DEkmAwjiHxv8JAYK5gvw==,type:comment]
+    #ENC[AES256_GCM,data:mTQAu61zs2UE3OpY13yl8wzfsvZOkKP8in07/KSDNaQSdlVCGGD1nKb2t1gV7sdyvjfRsaciId/jzLHrmb1TNwG7mRJ8eKKeEUdY8wg=,iv:CpeBaSEVmZGZ494mDM8od1Q6x9ICwI/aCEfR+n6NeIA=,tag:hLq7580Jk8qVFeLyP/xooQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:CoiQMNXcFVuN2V54hpLQEglecUCWxD95jFVgTewm82STD9IHfbd+UDrtaQEnr2+2,iv:sn4Nq/AliAB2WkCHJHtm4m1VlwNFP2T+xPCbY4OgFUk=,tag:X9cHAOwiZnGb/Ej+SynaHA==,type:str]
+    #ENC[AES256_GCM,data:4wiVPJ5dpgE67gYlNv7pa8iPhKGvq95O4SzCGiUt+XucKvP4I5co7vwU+y+3ZRwgyYxNaqdjKY7lw1IYo/UPQEirWZh234I=,iv:9Hu0vpTD+A3fhWTJ1GKyNYdAQB/bhWh3zPs2AHgYjCU=,tag:lRLS4VlBPlEtGeugk/PF+A==,type:comment]
+    #ENC[AES256_GCM,data:5oOmojmQOrE5wQy+rjKrXYgKdR8dZjN8qA6WVMYjSM/6YQowGyqQts8UnKkX4JgVPZlBZL4W,iv:sERwVIBPSOf1fmXcT59YcOIfS1cNDq6ln2HK4oqEUA8=,tag:EGwm9d4LlwWCl9kBTYUFNQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:UbM/cHSKQw==,iv:9E4HVzugCXzG5VqS+6mEJ+RNqkpj4orvePqn5C7fWsg=,tag:iOGloEAUveHud0g1rqqEqg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:yJayszj9oO4Av05MfNNCP2Bj6xw=,iv:5CKbFMpgPRqiQ/hG6KKCcmEkQ8KzZO4zIcGciGbNeco=,tag:j6ItFwXa4xruXX97s26UhA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:H87j05TE8QMA3A8=,iv:0gz+dBjUgnye6jDEP336h054ufQ+gdDnvmyen6ztOMg=,tag:pCajByyvCj5HnPwOh7Oapw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:NBvzfvACo3u9QpvkL/yb,iv:sm46qLRT9RhGo2h5KAZHUVKZaY+yacWuDrRBH6+IFpE=,tag:9jMouUOKr6BJqZpYWCO4sw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:rQ6usdhqFEcQdydjlzvCtGdEUyRDXi5xnQ==,iv:HvIRCTbR4j8CA8X7Y7fdQkyNgBddoujvl4qaE1JyO1I=,tag:vKCttFJ5+EbFI5NlObKs2A==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:iOMWnEA7OaxipVPqsvCgm9pOXHjr2O1Frz9SG5y4jg==,iv:STbs1r63sYAQhr/vFkjw3BR/W4d+eFQXWJnh3Ae4qr0=,tag:N47/x9/lyRSzzM+XC+LXfQ==,type:str]
+    #ENC[AES256_GCM,data:ETDE+EMSrr4jYhpznkgvfYJF6WBQAmRaAb6EOINo7ilZ1Go2mKI=,iv:kEvebEfoD/EBRtGjlzbLRFyRUpRmTWPcbfjK3z/WHc4=,tag:ysAtJCzQofOudywo43JZoA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:MaA4wjtSkB36niVz8LaVA5PE+vQ=,iv:yDJGFE1lzb/I5MhEzNmmj6bRwHsLqBdTFo/UsZoPwCo=,tag:XNC5WmqDyeGl5bIS1xV6qQ==,type:str]
+    #ENC[AES256_GCM,data:oa8XjHIU4cEQXrx7ZMI=,iv:V6BQXSGpFea8glJXIwxcn204d2+Bdafx98PrnNBJzWM=,tag:4qjM9ZHn47AaYPmODLhZKA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:fL4vRYFTTmx56eOsgQ==,iv:zETPZ9aJmh9EXzF6o+5b3ngUlBrv7W2a1jNNOcXdPqY=,tag:2Mpx0M6dEMcqlMDGuftb6g==,type:str]
+    SVCNET: ENC[AES256_GCM,data:jZ4NqlP32j+vI/tzzA==,iv:DW71Mc1ifCXMHmVXPS9zad/6XKLzeyjWDQSQWHwnlGk=,tag:8Kl94VLXsAsH2z583uWYGA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:yWyHRw==,iv:UK56FPDbXgWNXaQYB0Li/1q/RbLBORk7AKei6ruq3tA=,tag:e0CyUr8nTdGqB8wO6KKteg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqc2szcEtsb000V0Fadysy
-            MlJyNG1sMnNzSzBDV3dmbHo1VWZLUjdaSkJVCnoxQjdNcGJXWUk2eUZZL2FjK3Rx
-            TU84ZDB6UXRXM1ZDekpGZDU2RTIrZ2cKLS0tIGtRVGhENDI2dGc4Qk5MMCsrWU5k
-            RDlHMFoxTUt2cC83QXBiUHU4WGJNd2sKnLzSeJ6zaPvve/KrTsJKvK19Eb0OUUNf
-            YC/ZJWrWkl10ciUUzxu0PWhK9UqtTGkzU/xP29J3G7IN7wtknYwvwA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqWjE0a3FsS3lCN2xReVVZ
+            UklUcXlXVUdQNmpMUUNZT2JmeHJwa1lxc3drClhDN1VjSk9DcG0zNDE0MDBTRzhs
+            WVp6WWs3ZitlNEtwaXYxcUZnR0R4NlUKLS0tIHI2WnVPZTJKOVg2YW1uajA5RVpP
+            OU0rTTR2OXp4b1o0cy9XdmtCdzFReDgK1vPea2WIlzK6DrzscS/4vYm8LWGdIQYk
+            7+bTRSxHKiqNKab7LcIaCw+LyoaDUpkvfgyGR+TYFTj7W58yJEAqOQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-12T18:30:46Z"
-    mac: ENC[AES256_GCM,data:SXDN1XBmt1oQysW3nmqEyV8ghTHON9LSLSfsgSsPIx2ua8ZmN0LVOYx7Eg9xNggrvvTNAAyaAnSeIuxC+BlHxM7HulqPfqfmX/cqwwwEwLRa1MzIhGOauE+VTLtJ/ZvkUzVSb6bIPRkb+hRq/rqf7bJngOlE7e4Arxjk7aMk5qc=,iv:HyG0yMmYRQc2A/bfMTnU0yzBbn/wnWwMZRn/0rTUd5I=,tag:wMsc356xixSmptRV2k1NCg==,type:str]
+    lastmodified: "2025-01-12T18:33:24Z"
+    mac: ENC[AES256_GCM,data:qRpzUycYpwHU7BlaUjeuqkRVqF/T0iS0qCqk8LyUpnBN3QKiyXtreaIfajHTiyD54vBk5egbG+Z63iNOcMNEfAELQSMWLKIVy4QF2F4Z3ev4+itLxMYG9SrNpvA+mKGO5Iokg+FGUKxYi0uSB8Yyl2WYn4O9rXdGRzaOmBANd+s=,iv:FzjyQz+2d4v6SuzrUC9WexbUgqzkfW5CA1XdPEQuTis=,tag:leOvzA3BGuy52b2/iehksA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
