--- a/clusters/main/kubernetes/apps/plex-pass/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/plex-pass/app/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
     keepHistory: false
   values:
     credentials:
-      Backblaze:
+      backblaze:
         accessKey: ${BACKBLAZE_ACCESS_KEY}
         bucket: volsync-plex-pass
         secretKey: ${BACKBLAZE_SECRET_KEY}
@@ -72,7 +72,7 @@ spec:
         volsync:
           - name: config
             type: restic
-            credentials: Backblaze
+            credentials: backblaze
             dest:
              enabled: true
             src:
